--- a/src/sections/Work.css
+++ b/src/sections/Work.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap');
 
 .Project {
-    background-color: #e2efff;
+    background-color: #6e44ff;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
