--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap');
+
 .NavBar {
     background: rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(2px);
+}
+
+.NavLink {
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
 }
