--- a/src/sections/Contact.css
+++ b/src/sections/Contact.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 .Contact {
     /* background-color: #282c34; */
@@ -17,18 +18,24 @@
 }
 
 form {
-    font-family: 'Eczar', serif;
+    font-family: 'Roboto', sans-serif;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
     width: 40%;
 }
 
+label {
+    font-family: 'Eczar', 'serif';
+}
+
 input {
     width: 100%;
     border: 1px solid rgb(178, 178, 178);
     border-radius: 10px;
-    outline-color: rgb(181, 211, 250) !important;
+    outline-color: #6e44ff !important;
+    padding-left: 2%;
+    font-size: 18px;
 }
 
 /* .input:focus {
@@ -39,11 +46,13 @@ textarea {
     width: 100%;
     border: 1px solid rgb(178, 178, 178);
     border-radius: 10px;
-    outline-color: rgb(181, 211, 250) !important;
+    outline-color: #6e44ff !important;
+    padding-left: 2%;
+    font-size: 18px;
 }
 
 input[type='submit'] {
-    background-color: rgb(60, 143, 252);
+    background-color: #6e44ff;
     border: none;
     margin-top: 2rem;
     font-size: 17px;
@@ -52,6 +61,7 @@ input[type='submit'] {
     align-self: center;
     font-family: '';
     color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
 label {
