--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+:root {
+  --toastify-color-success: #6e44ff;
+}
+
 .App {
   text-align: center;
+  position: relative;
+  height: 100vh;
+    width: 100%;
 }
 
 .App-logo {
