--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,12 +1,321 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap');
 
-.NavBar {
-    background: rgba(255, 255, 255, 0.25);
-    backdrop-filter: blur(2px);
+/* =========
+VARIABLES
+========= */
+:root {
+    --offset-value: 30;
+    --btn-size: 60;
+    
+    --green: #6e44ff;
 }
 
-.NavLink {
-    font-family: 'Roboto', sans-serif;
-    font-size: 17px;
+/* =======
+WRAPPER
+======= */
+.wrapper {
+    font-family: 'Encode Sans Condensed', sans-serif;
+    font-weight: 600;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    background: linear-gradient(to top right, #4ECA78, #D0DB68);
+}
+
+/* =====================
+NAVIGATION BACKGROUND
+===================== */
+#nav-bg {
+    transform-origin: center center;
+    transition: transform .3s;
+    transform: translate(var(--translate-x), var(--translate-y)) scale(var(--scale));
+    will-change: transform;
+    pointer-events: none;
+    background-color: #fafafa;
+    border-radius: 50%;
+}
+
+/* ======
+BUTTON
+====== */
+.btn {
+    position: fixed;
+    height: calc(var(--btn-size)*1px);
+    width: calc(var(--btn-size)*1px);
+    top: calc((var(--offset-value))*1px);
+    right: calc(var(--offset-value)*1px);
+    /*left: calc(50% - (var(--btn-size)/2*1px)); if you wish to center it */
+    border-radius: 50%;
+    background: #fafafa;
+    cursor: pointer;
+    margin: 0;
+    padding: 0 15px;
+    border: none;
+    z-index: 100;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+#toggle-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--green);
+    /* box-shadow: 0 6px 12px rgba(0,0,0,.1); */
+    transition: transform .3s;
+    border-radius: 50%;
+}
+
+#toggle-btn span {
+    position: relative;
+    width: 100%;
+}
+
+#toggle-btn span {
+    margin-top: -4px;
+}
+#toggle-btn span + span {
+    margin-top: 8px;
+}
+
+#toggle-btn span:before,
+#toggle-btn span:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    background: currentColor;
+    opacity: .9;
+    height: 100%;
+    width: 50%;
+    height: 4px;
+    transition: .25s cubic-bezier(.6,0,.3,1);
+    transform-origin: center center;
+}
+
+#toggle-btn span:before {
+    left: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+#toggle-btn span:after {
+    right: 0;
+    border-radius: 0 3px 3px 0;
+}
+
+#toggle-btn.shown span:nth-of-type(1):before {
+    transform: translate3d(3px, 3.5px, 0) rotate(45deg);
+}
+
+#toggle-btn.shown span:nth-of-type(1):after {
+    transform: translate3d(-3px, 3.5px, 0) rotate(-45deg);
+}
+
+#toggle-btn.shown span:nth-of-type(3):before {
+    transform: translate3d(3px, -3.5px, 0) rotate(-45deg);
+}
+
+#toggle-btn.shown span:nth-of-type(3):after {
+    transform: translate3d(-3px, -3.5px, 0) rotate(45deg);
+}
+
+#toggle-btn.shown span:nth-of-type(2):before,
+#toggle-btn.shown span:nth-of-type(2):after {
+    opacity: 0;
+}
+
+#toggle-btn.shown span:nth-of-type(2):before {
+    transform: translateX(-200%);
+}
+
+#toggle-btn.shown span:nth-of-type(2):after {
+    transform: translateX(200%);
+}
+
+#toggle-btn.shown:before {
+    transform: scale(.6);
+    transition: .2s;
+}
+
+#toggle-btn:before {
+    content: '';
+    transition: .2s .2s;
+    position: absolute;
+    top: 3px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.1);
+    border-radius: inherit;
+    filter: blur(5px);
+    z-index: -2;
+}
+#toggle-btn:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    background: #fafafa;
+    z-index: -1;
+}
+
+/* ==========
+NAVIGATION
+========== */
+nav {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    display: flex;
+    z-index: 200;
+    pointer-events: none;
+}
+
+nav ul {
+    margin: auto;
+    pointer-events: auto;
+    text-align: center;
+    padding: 0;
+    list-style-type: none;
+}
+
+nav li {
+    font-size: 30px;
+    color: #212121;
+    user-select: none;
+    transform: translate(-20px,20px) scale(.9);
+    transition: 0s;
+    opacity: 0;
+    visibility: hidden;
+    will-change: transform;
+}
+
+nav li + li {
+    margin-top: 30px;
+}
+
+#toggle-btn.shown ~ nav li {
+    transform: none;
+    opacity: 1;
+    visibility: visible;
+    transition: .35s cubic-bezier(.4,2.08,.55,1);
+}
+
+#toggle-btn.shown ~ nav li:nth-child(1) {
+    transition-delay: .15s;
+}
+#toggle-btn.shown ~ nav li:nth-child(2) {
+    transition-delay: .125s;
+}
+#toggle-btn.shown ~ nav li:nth-child(3) {
+    transition-delay: .1s;
+}
+
+/* ============
+LINK EFFECT
+============ */
+.link {
+    position: relative;
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    color: #495867;
+    font-family: 'Eczar', serif;
+    font-weight: 700;
+  }
+  
+  .link:before,
+  .link:after {
+    position: absolute;
+    content: '';
+    height: 3px;
+    width: 50%;
+    background: var(--green);
+    top: calc(50% + 2px);
+    transition: transform .3s cubic-bezier(.5,.5,0,1);
+  }
+  
+  .link:before {
+    left: 0;
+    transform: translateX(calc(-100% - 10px)) scaleX(0);
+    transform-origin: left;
+  }
+  
+  .link:after {
+    right: 0;
+    transform: translateX(calc(100% + 10px)) scaleX(0);
+    transform-origin: right;
+  }
+  
+  .link:hover:before {
+    transform: translateX(calc(-100% - 10px)) scaleX(1);
+    transform-origin: right;
+  }
+  
+  .link:hover:after {
+    transform: translateX(calc(100% + 10px)) scaleX(1);
+    transform-origin: left;
+  }
+  
+  
+  /* =======
+  CONTENT
+  ======= */
+  #content {
+    display: flex;
+    height: 100%;
+  }
+  
+  #content h1 {
+    font-size: calc(4vmin + 1em);
+    text-align: center;
+    margin: auto;
+    color: #fff;
+    text-shadow: 0 6px 18px rgba(0,0,0,.1);
+  }
+  
+  
+  
+  
+  /* Usual suspects */
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+  html, body {
+    height: 100%;
+  }
+  
+  a,
+  a:visited,
+  a:focus,
+  a:active,
+  a:link {
+    text-decoration: none;
+    outline: 0;
+  }
+  
+  a {
+    color: currentColor;
+    transition: .2s ease-in-out;
+  }
+  
+  ul {
+    padding: 0;
+    list-style: none;
+  }
+
+  @media(max-width: 400px) {
+    :root {
+        --offset-value: 20;
+        --btn-size: 50;
+    }
 }
