--- a/src/sections/Work.css
+++ b/src/sections/Work.css
@@ -11,7 +11,8 @@
     /* color: white; */
 }
 
-.header {
+.ProjectHeader {
     font-family: 'Eczar', serif;
     font-weight: 700;
+    color: #ffff;
 }
