--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -7,7 +7,7 @@ VARIABLES
     --offset-value: 30;
     --btn-size: 60;
     
-    --green: #6e44ff;
+    --mainColor: #6e44ff;
 }
 
 /* =======
@@ -27,7 +27,7 @@ NAVIGATION BACKGROUND
 ===================== */
 #nav-bg {
     transform-origin: center center;
-    transition: transform .3s;
+    transition: transform .5s;
     transform: translate(var(--translate-x), var(--translate-y)) scale(var(--scale));
     will-change: transform;
     pointer-events: none;
@@ -61,7 +61,7 @@ BUTTON
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: var(--green);
+    color: var(--mainColor);
     /* box-shadow: 0 6px 12px rgba(0,0,0,.1); */
     transition: transform .3s;
     border-radius: 50%;
@@ -85,7 +85,7 @@ BUTTON
     position: absolute;
     top: 0;
     background: currentColor;
-    opacity: .9;
+    /* opacity: .9; */
     height: 100%;
     width: 50%;
     height: 4px;
@@ -208,14 +208,18 @@ nav li + li {
     transition: .35s cubic-bezier(.4,2.08,.55,1);
 }
 
+
 #toggle-btn.shown ~ nav li:nth-child(1) {
-    transition-delay: .15s;
-}
-#toggle-btn.shown ~ nav li:nth-child(2) {
     transition-delay: .125s;
 }
+#toggle-btn.shown ~ nav li:nth-child(2) {
+    transition-delay: .15s;
+}
 #toggle-btn.shown ~ nav li:nth-child(3) {
-    transition-delay: .1s;
+    transition-delay: .175s;
+}
+#toggle-btn.shown ~ nav li:nth-child(4) {
+    transition-delay: .2s;
 }
 
 /* ============
@@ -228,94 +232,90 @@ LINK EFFECT
     color: #495867;
     font-family: 'Eczar', serif;
     font-weight: 700;
-  }
-  
-  .link:before,
-  .link:after {
+}
+
+.link:before,
+.link:after {
     position: absolute;
     content: '';
     height: 3px;
     width: 50%;
-    background: var(--green);
+    background: var(--mainColor);
     top: calc(50% + 2px);
     transition: transform .3s cubic-bezier(.5,.5,0,1);
-  }
-  
-  .link:before {
+}
+
+.link:before {
     left: 0;
     transform: translateX(calc(-100% - 10px)) scaleX(0);
     transform-origin: left;
-  }
-  
-  .link:after {
+}
+
+.link:after {
     right: 0;
     transform: translateX(calc(100% + 10px)) scaleX(0);
     transform-origin: right;
-  }
-  
-  .link:hover:before {
+}
+
+.link:hover:before {
     transform: translateX(calc(-100% - 10px)) scaleX(1);
     transform-origin: right;
-  }
-  
-  .link:hover:after {
+}
+
+.link:hover:after {
     transform: translateX(calc(100% + 10px)) scaleX(1);
     transform-origin: left;
-  }
-  
-  
-  /* =======
-  CONTENT
-  ======= */
-  #content {
-    display: flex;
-    height: 100%;
-  }
-  
-  #content h1 {
-    font-size: calc(4vmin + 1em);
-    text-align: center;
-    margin: auto;
-    color: #fff;
-    text-shadow: 0 6px 18px rgba(0,0,0,.1);
-  }
-  
-  
-  
-  
-  /* Usual suspects */
-  * {
+}
+
+/* Usual suspects */
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  }
-  
-  html, body {
+}
+
+html, body {
     height: 100%;
-  }
-  
-  a,
-  a:visited,
-  a:focus,
-  a:active,
-  a:link {
+}
+
+a,
+a:visited,
+a:focus,
+a:active,
+a:link {
     text-decoration: none;
     outline: 0;
-  }
-  
-  a {
+}
+
+a {
     color: currentColor;
     transition: .2s ease-in-out;
-  }
-  
-  ul {
+}
+
+ul {
     padding: 0;
     list-style: none;
-  }
+}
 
-  @media(max-width: 400px) {
+@media(max-width: 400px) {
     :root {
         --offset-value: 20;
-        --btn-size: 50;
+        --btn-size: 45;
+    }
+
+    #toggle-btn.shown span:nth-of-type(1):before {
+        transform: translate3d(1px, 4px, 0) rotate(45deg);
+    }
+    
+    #toggle-btn.shown span:nth-of-type(1):after {
+        transform: translate3d(-1px, 4px, 0) rotate(-45deg);
+    }
+    
+    #toggle-btn.shown span:nth-of-type(3):before {
+        transform: translate3d(1px, -4px, 0) rotate(-45deg);
+    }
+    
+    #toggle-btn.shown span:nth-of-type(3):after {
+        transform: translate3d(-1px, -4px, 0) rotate(45deg);
     }
 }
