--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -42,7 +42,7 @@ BUTTON
     position: fixed;
     height: calc(var(--btn-size)*1px);
     width: calc(var(--btn-size)*1px);
-    top: calc((var(--offset-value))*1px);
+    bottom: calc((var(--offset-value))*1px);
     right: calc(var(--offset-value)*1px);
     /*left: calc(50% - (var(--btn-size)/2*1px)); if you wish to center it */
     border-radius: 50%;
@@ -258,12 +258,12 @@ LINK EFFECT
 }
 
 .link:hover:before {
-    transform: translateX(calc(-100% - 10px)) scaleX(1);
+    transform: translateX(calc(-100% - 10px)) scaleX(.5);
     transform-origin: right;
 }
 
 .link:hover:after {
-    transform: translateX(calc(100% + 10px)) scaleX(1);
+    transform: translateX(calc(100% + 10px)) scaleX(.5);
     transform-origin: left;
 }
 
