--- a/src/sections/Header.css
+++ b/src/sections/Header.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 .Header {
     /* background-color: #282c34; */
@@ -29,4 +30,17 @@
 
 .name {
     color: #6e44ff;
+}
+
+.app-p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    width: 35%;
+}
+
+@media(max-width: 400px) {
+    .app-p {
+        font-size: 12px;
+        width: 85%;
+    }
 }
