--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -10,24 +10,12 @@ VARIABLES
     --mainColor: #6e44ff;
 }
 
-/* =======
-WRAPPER
-======= */
-.wrapper {
-    font-family: 'Encode Sans Condensed', sans-serif;
-    font-weight: 600;
-    height: 100vh;
-    width: 100%;
-    position: relative;
-    background: linear-gradient(to top right, #4ECA78, #D0DB68);
-}
-
 /* =====================
 NAVIGATION BACKGROUND
 ===================== */
 #nav-bg {
     transform-origin: center center;
-    transition: transform .5s;
+    transition: transform .4s;
     transform: translate(var(--translate-x), var(--translate-y)) scale(var(--scale));
     will-change: transform;
     pointer-events: none;
@@ -180,7 +168,7 @@ nav {
 
 nav ul {
     margin: auto;
-    pointer-events: auto;
+    pointer-events: none;
     text-align: center;
     padding: 0;
     list-style-type: none;
@@ -206,20 +194,21 @@ nav li + li {
     opacity: 1;
     visibility: visible;
     transition: .35s cubic-bezier(.4,2.08,.55,1);
+    pointer-events: all;
 }
 
 
 #toggle-btn.shown ~ nav li:nth-child(1) {
-    transition-delay: .125s;
+    transition-delay: .2s;
 }
 #toggle-btn.shown ~ nav li:nth-child(2) {
-    transition-delay: .15s;
-}
-#toggle-btn.shown ~ nav li:nth-child(3) {
     transition-delay: .175s;
 }
+#toggle-btn.shown ~ nav li:nth-child(3) {
+    transition-delay: .155s;
+}
 #toggle-btn.shown ~ nav li:nth-child(4) {
-    transition-delay: .2s;
+    transition-delay: .125s;
 }
 
 /* ============
