--- a/src/sections/Contact.css
+++ b/src/sections/Contact.css
@@ -9,6 +9,7 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: #495867;
+    position: relative;
 }
 
 .header {
@@ -25,7 +26,10 @@ form {
 }
 
 label {
-    font-family: 'Eczar', 'serif';
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    margin-top: 10px;
+    font-weight: 700;
 }
 
 input {
@@ -57,17 +61,13 @@ input[type='submit'] {
     font-family: '';
     color: white;
     font-family: 'Roboto', sans-serif;
+    font-weight: 700;
 }
 
 input[type='submit']:hover {
-    background-color: #5123f8;
+    background-color: #0B58CA;
     transform: scale(1.05);
     transition-duration: 300ms;
-}
-
-label {
-    font-size: 20px;
-    margin-top: 10px;
 }
 
 @media(max-width: 400px) {
@@ -81,5 +81,9 @@ label {
 
     input[type='submit'] {
         width: 50%;
+    }
+
+    label {
+        font-size: 16px;
     }
 }
