--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
 :root {
     --toastify-color-success: #6e44ff;
-    --toastify-color-error: #6e44ff;
+    /* --toastify-color-error: #6e44ff; */
+    --toastify-font-family: 'Roboto', sans-serif;
 }
 
 .App {
