--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -5,7 +5,7 @@ VARIABLES
 ========= */
 :root {
     --offset-value: 30;
-    --btn-size: 60;
+    --btn-size: 50;
     
     --mainColor: #6e44ff;
 }
@@ -92,19 +92,19 @@ BUTTON
 }
 
 #toggle-btn.shown span:nth-of-type(1):before {
-    transform: translate3d(3px, 3.5px, 0) rotate(45deg);
+    transform: translate3d(1px, 3.5px, 0) rotate(45deg);
 }
 
 #toggle-btn.shown span:nth-of-type(1):after {
-    transform: translate3d(-3px, 3.5px, 0) rotate(-45deg);
+    transform: translate3d(-1px, 3.5px, 0) rotate(-45deg);
 }
 
 #toggle-btn.shown span:nth-of-type(3):before {
-    transform: translate3d(3px, -3.5px, 0) rotate(-45deg);
+    transform: translate3d(1px, -3.5px, 0) rotate(-45deg);
 }
 
 #toggle-btn.shown span:nth-of-type(3):after {
-    transform: translate3d(-3px, -3.5px, 0) rotate(45deg);
+    transform: translate3d(-1px, -3.5px, 0) rotate(45deg);
 }
 
 #toggle-btn.shown span:nth-of-type(2):before,
@@ -267,17 +267,18 @@ html, body {
     height: 100%;
 }
 
-a,
-a:visited,
-a:focus,
-a:active,
-a:link {
+.link,
+.link:visited,
+.link:focus,
+.link:active,
+.link:link {
     text-decoration: none;
     outline: 0;
+    color: #495867;
 }
 
-a {
-    color: currentColor;
+.link {
+    /* color: currentColor; */
     transition: .2s ease-in-out;
 }
 
@@ -288,7 +289,7 @@ ul {
 
 @media(max-width: 400px) {
     :root {
-        --offset-value: 20;
+        /* --offset-value: 20; */
         --btn-size: 45;
     }
 
