--- a/src/sections/About.css
+++ b/src/sections/About.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 .About {
     /* background-color: #282c34; */
@@ -15,4 +16,46 @@
 .header {
     font-family: 'Eczar', serif;
     font-weight: 700;
+}
+
+.aboutJpg {
+    width: 50%;
+}
+
+.AboutContent {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.AboutText {
+    width: 45%;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    line-height: 2;
+}
+
+.AboutSocial {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+@media(max-width: 400px) {
+    .AboutContent  {
+        flex-direction: column;
+        width: 90%;
+    }
+
+    .AboutText {
+        width: 100%;
+        font-size: 16px;
+    }
+
+    .aboutJpg {
+        margin-top: 20px;
+        width: 90%;
+    }
 }
