--- a/src/components/SkillsIcons.css
+++ b/src/components/SkillsIcons.css
@@ -13,13 +13,14 @@
     justify-content: center;
     align-items: center;
     background-color: #ffff;
+    will-change: transform;
 }
 
-.skillsIcon:hover {
+/* .skillsIcon:hover {
     color: '#ffff';
     transform: scale(1.1);
     transition-duration: 800ms;
-}
+} */
 
 img {
     width: 60%;
